<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    android:backgroundTint="@color/teal_700"
    app:cardCornerRadius="5dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5"
            android:id="@+id/idLL1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/item_name"
                android:textColor="@color/black"
                android:padding="4dp"
                android:layout_margin="3dp"
                android:id="@+id/idTVItemName"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/quantity"
                android:textColor="@color/black"
                android:padding="4dp"
                android:layout_margin="3dp"
                android:id="@+id/idTVQuantity"/>

            <TextView
                android:id="@+id/idTVRate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1.5"
                android:padding="4dp"
                android:text="@string/rate"
                android:textColor="@color/black" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:padding="4dp"
                android:src="@drawable/ic_delete"
                android:layout_margin="3dp"
                android:id="@+id/idTVDelete"
                app:tint="@color/black"
                android:contentDescription="@string/trash" />








        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_cost"
            android:layout_below="@+id/idLL1"
            android:textColor="@color/white"
            android:layout_toStartOf="@id/idTotalAmt"
            android:layout_margin="3dp"
            android:padding="4dp"
            android:id="@+id/idTVHeading"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/idTotalAmt"
            android:textColor="@color/white"
            android:layout_below="@+id/idLL1"
            android:layout_alignParentEnd="true"
            android:text="@string/amt"
            android:padding="4dp"
            android:layout_margin="3dp"/>




    </RelativeLayout>

</androidx.cardview.widget.CardView>