<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_700">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_items_to_cart"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="4dp"
            android:layout_margin="4dp"
            android:id="@+id/idTVHeading"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/idTVHeading">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/enter_item_name"
                android:padding="5dp"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/idEditItemName"
                android:layout_margin="5dp"
                android:inputType="text"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="14sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/enter_item_quantity"
                android:padding="5dp"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/idEditItemQuantity"
                    android:layout_margin="5dp"
                    android:inputType="number"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:textSize="14sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/enter_item_price"
                android:padding="5dp"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/idEditItemPricee"
                    android:layout_margin="5dp"
                    android:inputType="number"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:textSize="14sp"/>
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:weightSum="2"
                android:orientation="horizontal">


                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:id="@+id/idBtnCancel"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:id="@+id/idBtnAdd"
                    android:text="@string/add"
                    android:textAllCaps="false"
                    style="?android:attr/buttonBarButtonStyle" />



            </LinearLayout>





        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>